login & populate button

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -11,5 +11,6 @@ serenity {
 # Chrome options can be defined using the chrome.switches property
 #
 chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
+                   --disable-web-security;--allow-running-insecure-content;--ignore-certificate-errors;
                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
                    --incognito;--disable-infobars,--disable-gpu"""
